# geonode-anvcc

./: .gitignore  Dockerfile  requirements.txt  setup.cfg  tasks.py
geonode/: settings.py  urls.py  utils.py
geonode/anvcc/: apps.py  views.py
geonode/anvcc/templates/anvcc/: classify.css
geonode/api/: api.py  resourcebase_api.py  urls.py  views.py
geonode/base/: forms.py  models.py  urls.py  views.py
geonode/base/templatetags/: base_tags.py
geonode/catalogue/: urls.py
geonode/catalogue/metadataxsl/: urls.py
geonode/documents/: forms.py  models.py  views.py
geonode/documents/templates/documents/: document_metadata_advanced.html
geonode/documents/templates/layouts/: doc_panels.html
geonode/geoapps/: views.py
geonode/geoapps/templates/apps/: app_metadata_advanced.html
geonode/geoapps/templates/layouts/: app_panels.html
geonode/geoserver/: helpers.py  urls.py
geonode/geoserver/createlayer/: urls.py
geonode/groups/: models.py  urls.py
geonode/harvesting/: apps.py
geonode/invitations/: urls.py
geonode/layers/: models.py  utils.py  views.py
geonode/layers/templates/datasets/: dataset_metadata_advanced.html
geonode/layers/templates/layouts/: panels.html
geonode/maps/: models.py  tests.py
geonode/maps/api/: views.py
geonode/maps/templates/layouts/: map_panels.html
geonode/maps/templates/maps/: map_metadata_advanced.html
geonode/messaging/: urls.py
geonode/monitoring/: models.py  urls.py
geonode/people/: __init__.py  admin.py  forms.py  urls.py  views.py
geonode/people/fixtures/: sample_admin.json
geonode/people/templates/people/: profile_edit.html  profile_list.html
geonode/proxy/: urls.py
geonode/resource/: apps.py  utils.py
geonode/security/: urls.py
geonode/services/: urls.py  views.py
geonode/social/: urls.py
geonode/static/geonode/js/upload/: main.js
geonode/static/lib/js/: require.js
geonode/templates/: _announcements.html
geonode/themes/: models.py
geonode/upload/: forms.py  upload.py  urls.py  utils.py  views.py
geonode/upload/api/: views.py
package/debian/: changelog
