[metadata]
name = GeoNode
description = Application for serving and sharing geospatial data
license = GPL
author = GeoNode Developers
author_email = dev@geonode.org
url = http://geonode.org
download_url = https://github.com/GeoNode/geonode/archive/master.zip
keywords = django, geonode
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
setup_requires =
    setuptools
install_requires =
    # native dependencies
    psycopg2-binary>=2.9.9
    
    #Niji
    wagtail>=5.2.1
    Django<5,>=4.2.7
    gdal==3.4.1
    
      
    httplib2>=0.22.0
    hyperlink>=21.0.0
    Paver>=1.3.4
    python-slugify>=8.0.1
    decorator>=5.1.1
    tqdm
    Deprecated
    wrapt
    jsonschema
    zipstream-new
    schema
    rdflib
    smart_open
    PyMuPDF
    pathvalidate
    
    # Django Apps
    django-allauth
    django-appconf
    django-celery-results
    django-imagekit
    django-markdownify>=0.9.0
    django-mptt
    django-modeltranslation>=0.18.11,<0.19.0
    django-guardian>=2.4.0
    django-downloadview>=2.3.0
    django-polymorphic>=3.1.0
    django-tastypie
    django-tinymce
    django-grappelli
    django-uuid-upload-path
    django-widget-tweaks
    django-sequences>=2.8
    pyopenssl
    
    # geopython dependencies
    OWSLib
    pycsw
    SQLAlchemy
    mercantile
    geoip2
    
    # # Apps with packages provided in GeoNode's PPA on Launchpad.
    
    # Django Apps
    dj-database-url>=2.1.0
    dj-pagination
    django-select2>=8.1.2
    django-floppyforms
    django-forms-bootstrap>=3.1.0
    django-autocomplete-light>=3.9.7
    django-invitations>=2.1.0
    django-recaptcha>=4.0.0
    
    # REST
    djangorestframework>=3.14.0
    djangorestframework-gis>=1.0
    djangorestframework-guardian>=0.3.0
    drf-extensions>=0.7.1
    drf-writable-nested>=0.7.0
    drf-spectacular>=0.26.5
    # dynamic-rest==2.1.2
    dynamic-rest @ git+https://github.com/cesar-benjamin/dynamic-rest@master#egg=dynamic-rest

    pinax-notifications @ git+https://github.com/cesar-benjamin/pinax-notifications.git@master#egg=pinax-notifications
    pinax-ratings>=4.0.0
    
    # GeoNode org maintained apps.
    django_geonode_mapstore_client @ git+https://github.com/cesar-benjamin/geonode-mapstore-client.git@4.1.x#egg=django_geonode_mapstore_client
    geonode-importer @ git+https://github.com/cesar-benjamin/geonode-importer.git@1.0.6-alpha4#egg=geonode-importer
    django-avatar
    # geonode-oauth-toolkit
    django-oauth-toolkit
    # geonode-user-messages
    django-messages
    # geonode-announcements
    pinax-announcements
    # geonode-django-activity-stream
    django-activity-stream
    gn-arcrest
    geoserver-restconfig
    gn-gsimporter
    
    # haystack/elasticsearch
    django-haystack
    elasticsearch>=2.0.0,<9.0.0
    
    # datetimepicker widget
    django-bootstrap3-datetimepicker-2
    
    # storage manager dependencies
    django-storages
    dropbox
    google-cloud-storage
    google-cloud-core
    boto3
    
    # Django Caches
    python-memcached
    whitenoise
    Brotli
    
    # Contribs
    # xmltodict este ya esta
    # inflection
    jdcal
    mock
    timeout-decorator
    pylibmc
    sherlock
    
    # required by monitoring
    psutil
    django-cors-headers
    user-agents
    django-user-agents
    xmljson
    django-ipware
    # no version here, use latest one with fresh data
    pycountry
    
    # production
    uWSGI
    gunicorn
    ipython
    docker
    invoke
    
    # tests
    coverage
    requests-toolbelt==1.0.0
    flake8
    black
    pytest
    pytest-bdd
    splinter
    pytest-splinter
    pytest-django
    setuptools 
    # >=59.1.1,<67.9.0
    pip>=23.1.2
    Twisted
    pixelmatch==0.3.0
    factory-boy
    flaky==3.7.0
    selenium>=4.1.0,<5.0.0
    selenium-requests==2.0.3
    webdriver_manager
    
    # Security and audit
    mistune
    wandb
    # protobuf este ya está
    mako
    # jwcrypto este ya está

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 200
exclude=geonode/*/migrations/*,scripts,docs,static,migrations,node_modules
extend-ignore=E122,E124,E203,E731
